# openshift-cli-installer

./: .pre-commit-config.yaml  Dockerfile  OWNERS  README.md  cluster-install-command.sh  create_aro_cluster.sh  delete_aro_cluster.sh  pyproject.toml  tox.ini
.github/: in-solidarity.yml
openshift_cli_installer/: cli.py
openshift_cli_installer/libs/: user_input.py
openshift_cli_installer/libs/clusters/: aro_cluster.py  ipi_cluster.py  ocp_cluster.py  ocp_clusters.py  rosa_cluster.py
openshift_cli_installer/manifests/: aws-install-config-template.j2  clusters.example.yaml
openshift_cli_installer/utils/: clusters.py  const.py  general.py
