[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[project]
name = "openshift-cli-installer"
version = "3.0.12"
description = "CLI to install/uninstall Openshift clusters."
authors = [
  { name = "Meni Yakove", email = "myakove@gmail.com" },
  { name = "Ruth Netser", email = "rnetser@gmail.com" },
]
requires-python = "~=3.9"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "jinja2>=3.1.2,<4",
  "shortuuid>=1.0.11,<2",
  "click>=8.1.4,<9",
  "rosa-python-client>=1.0.36",
  "openshift-cluster-management-python-wrapper>=1.0.54",
  "python-terraform>=0.10.1,<0.11",
  "semver>=3.0.1,<4",
  "openshift-python-utilities>=5.0.0",
  "pyaml-env>=1.2.1,<2",
  "google-cloud-compute>=1.14.1,<2",
  "redhat-qe-cloud-tools>=1.0.46",
  "python-simple-logger>=1.0.7",
  "ruff>=0.11,<0.12",
  "timeout-sampler>=0.0.1",
  "openshift-python-wrapper>=11.0.14",
  "pytest-testconfig>=0.2.0,<0.3",
  "beautifulsoup4>=4.12.3,<5",
  "requests>=2.31.0,<3",
  "pyhelper-utils>=1.0.0,<2",
]

[project.urls]
Homepage = "https://github.com/RedHatQE/openshift-cli-installer"
Repository = "https://github.com/RedHatQE/openshift-cli-installer"
Documentation = "https://github.com/RedHatQE/openshift-cli-installer/blob/main/README.md"

[project.scripts]
openshift-cli-installer = "openshift_cli_installer.cli:main"

[tool.coverage.run]
omit = ["openshift_cli_installer/tests/*", "openshift_cli_installer/cli.py"]

[dependency-groups]
dev = ["ipdb>=0.13.13,<0.14", "ipython"]
tests = ["pytest>=8.0.0,<9", "pytest-mock>=3.12.0,<4", "pytest-cov>=5.0.0"]

[tool.coverage.report]
fail_under = 20   # TODO: Need to be at least 60
skip_empty = true

[tool.uv]
default-groups = ["dev", "tests"]

[tool.coverage.html]
directory = ".tests_coverage"

[tool.hatch.build.targets.sdist]
include = ["openshift_cli_installer", "manifests/*"]

[tool.hatch.build.targets.wheel]
include = ["openshift_cli_installer", "manifests/*"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
